Completed most retweeted function

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,30 @@
     "print(\"Importando data...\")\n",
     "tweets_df = pd.read_json('farmers-protest-tweets-2021-03-5.json', lines=True)\n",
     "print(\"Importación terminada\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Función: Buscar top 10 tweets más retweeteados\n",
+    "def find_most_retweeted(df):\n",
+    "  most_retweeted = df.sort_values('retweetCount', ascending=False).head(10)\n",
+    "  return most_retweeted\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encontrar tweets más retweeteados a partir de la función\n",
+    "most_retweeted = find_most_retweeted(tweets_df)\n",
+    "print(most_retweeted)"
    ]
   }
  ],
