COmpleted find_top_users function

--- a/main.ipynb
+++ b/main.ipynb
@@ -50,9 +50,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Encontrar tweets más retweeteados a partir de la función\n",
+    "# Ejemplo de uso de la función find_most_retweeted\n",
     "most_retweeted = find_most_retweeted(tweets_df)\n",
     "print(most_retweeted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Función: Los top 10 usuarios en función a la cantidad de tweets que emitieron.\n",
+    "def find_top_users(df):\n",
+    "  top_users = df['users'].mode()\n",
+    "  return top_users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ejemplo de uso de la función find_top_users\n",
+    "top_users = find_top_users(tweets_df)\n",
+    "print(top_users)"
    ]
   }
  ],
