Return only top 10 users

--- a/main.ipynb
+++ b/main.ipynb
@@ -64,7 +64,7 @@
     "# Función: Los top 10 usuarios en función a la cantidad de tweets que emitieron.\n",
     "def find_top_users(df):\n",
     "  top_users = df['users'].mode()\n",
-    "  return top_users"
+    "  return top_users.head(10)"
    ]
   },
   {
