Completed find_top_days function

--- a/main.ipynb
+++ b/main.ipynb
@@ -77,6 +77,31 @@
     "top_users = find_top_users(tweets_df)\n",
     "print(top_users)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Función: Los top 10 días donde hay más tweets.\n",
+    "def find_top_days(df):\n",
+    "  df[\"date\"] = pd.to_datetime(df[\"date\"])\n",
+    "  df[\"date\"] = df[\"date\"].dt.date\n",
+    "  top_days = df[\"date\"].mode()\n",
+    "  return top_days.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ejemplo de uso de la función find_top_days\n",
+    "top_days = find_top_days(tweets_df)\n",
+    "print(top_days)"
+   ]
   }
  ],
  "metadata": {
